--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         cosmetics for free</p>
                 </div>
                 <div class="header__picture">
-                    <img src="./img/header-picture.png" alt="" class="header__img">
+                    <img src="img/header-picture.png" alt="" class="header__img">
                 </div>
             </div>
         </div>
@@ -38,15 +38,15 @@
                         <div class="slider__nav-prev"></div>
                         
                         <ul>
-                            <li><img src="./img/slider-photo1.png" alt="" class="slider__nav-img"></li>
-                            <li><img src="./img/slider-photo2.png" alt="" class="slider__nav-img"></li>
-                            <li><img src="./img/slider-photo3.png" alt="" class="slider__nav-img"></li>
+                            <li><img src="img/slider-photo1.png" alt="" class="slider__nav-img"></li>
+                            <li><img src="img/slider-photo2.png" alt="" class="slider__nav-img"></li>
+                            <li><img src="img/slider-photo3.png" alt="" class="slider__nav-img"></li>
                         </ul>
 
                         <div class="slider__nav-next"></div>
                     </nav>
                     <div class="slider__view">
-                        <img src="./img/slider-photo1.png" alt="" class="slider__view-img">
+                        <img src="img/slider-photo1.png" alt="" class="slider__view-img">
                     </div>
                 </div>
 
@@ -54,11 +54,11 @@
                     <h3 class="product__rating-title">Best seller</h3>
                     <div class="product__rating-bar">
                         <ul class="product__rating-stars">
-                            <li class="product__rating-star"><img src="./img/Vector.svg" alt=""></li>
-                            <li class="product__rating-star"><img src="./img/Vector.svg" alt=""></li>
-                            <li class="product__rating-star"><img src="./img/Vector.svg" alt=""></li>
-                            <li class="product__rating-star"><img src="./img/Vector.svg" alt=""></li>
-                            <li class="product__rating-star"><img src="./img/Vector.svg" alt=""></li>
+                            <li class="product__rating-star"><img src="img/Vector.svg" alt=""></li>
+                            <li class="product__rating-star"><img src="img/Vector.svg" alt=""></li>
+                            <li class="product__rating-star"><img src="img/Vector.svg" alt=""></li>
+                            <li class="product__rating-star"><img src="img/Vector.svg" alt=""></li>
+                            <li class="product__rating-star"><img src="img/Vector.svg" alt=""></li>
                         </ul>
                         <p class="product__rating-reviews">(1731 reviews)</p>
                     </div>
